<resources>
    <string name="app_name">Password Manager</string>
    <string name="welcome_to_password_manager">Welcome to password manager</string>
    <string name="password_manager">Password Manager</string>
    <string name="login">Login</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="hello_there">Hello There!</string>
    <string name="dots">•••••••</string>
    <string name="register">Register</string>
    <string name="need_help">Need Help?</string>
    <string name="welcome">Welcome!</string>
    <string name="nice_to_see_you_again">Nice to see you again!</string>
    <string name="you_are_not_a_member">You are not a member?</string>
    <string name="send">Send</string>
    <string name="forgot_password">Forgot password</string>
    <string name="otp_message">Please enter your email id, You will receive an One Time Password (OTP) to create a new</string>
    <string name="already_a_member">Already a member?</string>
    <string name="username">Username</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="create_account">Create Account</string>
    <string name="vault">Vault</string>

    <string name="click_marker">expand_or_collapse</string>

    <array name="colors">
        <item>#3F51B5</item>
        <item>#303F9F</item>
        <item>#FF4081</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="add_new_password">Add New Password</string>
    <string name="add_password">Add Password</string>
    <string name="mobile_number">Mobile number</string>
    <string name="logout">Logout</string>
    <string name="enter_your_pin">Enter your pin</string>
    <string name="set_pin">Set Pin</string>
    <string name="enable_pin_lock">Enable Pin Lock</string>
    <string name="enter_your_4_digit_pincode">Enter your 4-digit Pincode</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="change">Change</string>
    <string name="change_password">Change Password</string>
    <string name="select_account">Select Account</string>
    <string name="account_name">Account Name</string>
    <string name="password">Password</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="no_account_found">No Account Found.</string>
    <string name="we_couldn_t_find_any_search_results">We couldn\'t find any search results.</string>
    <string name="whoops_no_matches">Whoops, no matches</string>
    <string name="give_it_another_go">Give it another go</string>
    <string name="title">Title</string>
    <string name="email_id_username_mobile_number">Email-Id/Username/Mobile Number</string>
    <string name="view_password">View Password</string>
    <string name="hide_password">Hide Password</string>
    <string name="open_settings">Open Settings</string>
    <string name="submit">Submit</string>
    <string name="show">Show</string>

    <string name="biometric_failed">Fingerprint not recognized</string>
    <string name="biometric_error_sdk_not_supported">Sdk version not supported</string>
    <string name="biometric_error_hardware_not_supported">Device does not support biometric authentication</string>
    <string name="biometric_error_fingerprint_not_available">Fingerprint is not registered in device</string>
    <string name="biometric_error_permission_not_granted">Permission is not granted by user</string>
    <string name="biometric_failure">Failed to view password!!</string>
    <string name="biometric_cancelled">Authentication cancelled by user</string>
    <string name="biometric_success">Login Successful</string>
    <string name="generate_password">Generate Password</string>
    <string name="lowercase_letters">Lowercase letters</string>
    <string name="uppercase_letters">Uppercase letters</string>
    <string name="digits">Digits</string>
    <string name="special_characters">Special Characters</string>
    <string name="click_here_to_copy">Click here to copy</string>
    <string name="generated_password">Generated Password</string>
    <string name="copy_password">Copy Password</string>
    <string name="update_password">Update Password</string>
</resources>
