<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".ui.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/ic_back_arrow" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/btnBack"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="vertical">

            <com.an.customfontview.CustomTextView
                android:id="@+id/tvWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello_there"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_26ssp"
                app:textFontPath="fonts/SF-Pro-Display-Bold.ttf" />

            <com.an.customfontview.CustomEditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/example_gmail_com"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                app:textFontPath="fonts/SF-Pro-Display-Regular.ttf" />

            <com.an.customfontview.CustomEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/dots"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                app:textFontPath="fonts/SF-Pro-Display-Regular.ttf" />

            <ProgressBar
                android:id="@+id/loginProgressBar"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/colorPrimary"
                android:layout_marginTop="@dimen/_20sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp">

                <com.an.customfontview.CustomButton
                    android:id="@+id/btnLogin"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bg_login_btn"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_16ssp" />

                <com.an.customfontview.CustomTextView
                    android:id="@+id/btnNeedHelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/need_help"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_14ssp"
                    app:textFontPath="fonts/SF-Pro-Display-Regular.ttf" />
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <com.an.customfontview.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/you_are_not_a_member"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12ssp"
            app:textFontPath="fonts/SF-Pro-Display-Regular.ttf" />

        <com.an.customfontview.CustomTextView
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12ssp"
            app:textFontPath="fonts/SF-Pro-Display-Regular.ttf" />
    </LinearLayout>
</LinearLayout>