<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.activity.SelectAccountActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAccounts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingTop="@dimen/_140sdp"
        android:scrollbars="none" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:layout_below="@id/layout_top"
        android:layout_marginTop="@dimen/_minus45sdp"
        android:background="@drawable/bg_gradient_soft_top" />

    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:background="@drawable/bg_select_account"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnAccountBack"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/ic_back_arrow"
                android:tint="@color/colorWhite" />

            <com.an.customfontview.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/select_account"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_20ssp"
                app:textFontPath="fonts/Montserrat-Bold.ttf" />
        </LinearLayout>

        <com.an.customfontview.CustomEditText
            android:id="@+id/edtSearchAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_top"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/bg_edittext_light"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableTint="@color/grey_40"
            android:hint="@string/search"
            android:paddingStart="@dimen/_8sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            tools:ignore="RtlSymmetry"
            tools:targetApi="m" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutNoData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center"
            android:src="@drawable/noresult" />

        <com.an.customfontview.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/whoops_no_matches"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_14ssp"
            app:textFontPath="fonts/Montserrat-SemiBold.ttf" />

        <com.an.customfontview.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/we_couldn_t_find_any_search_results"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_12ssp"
            app:textFontPath="fonts/Montserrat-Regular.ttf" />

        <com.an.customfontview.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/give_it_another_go"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_12ssp"
            app:textFontPath="fonts/Montserrat-Regular.ttf" />
    </LinearLayout>

</RelativeLayout>