<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.activity.PasswordDetailsActivity">


    <LinearLayout
        android:id="@+id/top_layout_pass_details"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnPassDetailsBack"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_back_arrow"
            android:tint="@color/colorAccent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_layout_pass_details"
        android:layout_below="@id/top_layout_pass_details"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_80sdp"
            android:id="@+id/imgPassList"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/whatsapp"
            android:layout_gravity="center"
            android:transitionName="imageTransition"
            android:layout_marginTop="@dimen/_15sdp" />

        <com.an.customfontview.CustomTextView
            android:id="@+id/tvPassDetailsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/select_account"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_20ssp"
            app:textFontPath="fonts/Montserrat-Bold.ttf" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_layout_pass_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_add_password"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <com.an.customfontview.CustomTextView
            android:id="@+id/tvPasswordUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableTint="@color/grey_60"
            android:hint="@string/email_id_username_mobile_number"
            android:imeOptions="actionNext"
            android:padding="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/grey_60"
            android:textSize="@dimen/_14ssp"
            app:textFontPath="fonts/Montserrat-Regular.ttf" />

        <com.an.customfontview.CustomTextView
            android:id="@+id/tvPassPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableTint="@color/grey_60"
            android:hint="@string/dots"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:padding="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/grey_60"
            android:textSize="@dimen/_14ssp"
            app:textFontPath="fonts/Montserrat-Regular.ttf" />

        <com.an.customfontview.CustomButton
            android:id="@+id/btnViewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/bg_login_btn"
            android:text="@string/view_password"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_16ssp"
            app:btnFontPath="fonts/Montserrat-Regular.ttf" />

        <com.an.customfontview.CustomButton
            android:id="@+id/btnHidePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/bg_login_btn"
            android:text="@string/hide_password"
            android:visibility="gone"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_16ssp"
            app:btnFontPath="fonts/Montserrat-Regular.ttf" />
    </LinearLayout>

</RelativeLayout>